--- a/src/app/admin/components/book/list/list.component.css
+++ b/src/app/admin/components/book/list/list.component.css
@@ -2,12 +2,62 @@
     border-radius: 0px
 }
 
-.panel-body {
+
+/* .panel-body#list {
     height: 500px;
-}
+} */
 
 .card-book {
     padding: 2%;
     border: 2px solid #838588;
     border-radius: 5px;
+}
+
+.table-categoty {
+    float: left;
+    margin-top: 2%;
+}
+
+.categoty {
+    float: right;
+    width: 100%;
+}
+
+.col-sm-9#transport {
+    display: grid;
+}
+
+.checkbox-warning {
+    margin-left: 5%;
+}
+
+@media (min-width: 768px) {
+    .table-categoty {
+        float: left;
+        margin-top: 2%;
+        width: 80%;
+    }
+    .categoty {
+        float: right;
+        width: 70%;
+    }
+    .col-sm-9#transport {
+        display: grid;
+        width: 75%;
+    }
+    .checkbox-warning {
+        margin-left: 0%;
+    }
+}
+
+.btn,
+input,
+textarea {
+    border-radius: 0px;
+    font-family: 'Kanit', sans-serif;
+}
+
+.btn-outline-success#btn-account {
+    float: left;
+    margin-left: 25%;
 }
