--- a/src/app/users/components/profiles/profile.component.css
+++ b/src/app/users/components/profiles/profile.component.css
@@ -4,6 +4,41 @@
      font-family: 'Kanit', sans-serif;
  }
  
+ .show-account {
+     width: 50%;
+     float: left;
+     margin-left: 25%
+ }
+ 
+ .edit {
+     float: right;
+ }
+ 
+ input,
+ .btn {
+     border-radius: 0px;
+ }
+ 
+ .btn-outline-success#btn-account {
+     float: left;
+ }
+ 
+ .btn-outline-danger#btn-account-cancal {
+     float: left;
+     margin-left: -6%;
+ }
+ 
+ @media (min-width: 768px) {
+     .btn-outline-success#btn-account {
+         float: left;
+         margin-left: 25%;
+     }
+     .btn-outline-danger#btn-account-cancal {
+         float: right;
+         margin-right: -26%;
+     }
+ }
+ 
  input {
      border-radius: 0px;
      font-family: 'Kanit', sans-serif;
